# akashic

./: .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  pyproject.toml
.claude/skills/akashic/: SKILL.md
.scratch/: PRD.md  abc.md
backend/app/: config.py  main.py
backend/app/api/: __init__.py  knowledge.py  projects.py  sync.py
backend/app/services/: project_service.py  sync_service.py
docs/: Akashic_Product_Deck.pptx  README.md  commands.md  configuration.md  generation.md  installation.md  publishing.md  quickstart.md  site.md  troubleshooting.md
frontend/: package-lock.json  vite-plugin-akashic.ts
frontend/src/: index.css
frontend/src/components/: CommitDialog.tsx  DocViewer.tsx  Editor.tsx  Layout.tsx  MermaidChart.tsx  SearchBar.tsx  Sidebar.tsx  TableOfContents.tsx  Toolbar.tsx
frontend/src/hooks/: useDoc.ts
frontend/src/lib/: dataSource.ts  search.ts
frontend/src/pages/: DocPage.tsx
knowledge_engine/: __init__.py
knowledge_engine/compiler/: __init__.py  frontmatter.py  markdown.py  templates.py
knowledge_engine/extraction/: __init__.py  base.py  package.py  readme.py
knowledge_engine/git/: __init__.py  sync.py
knowledge_engine/llm/: __init__.py  prompts.py  summarize.py
knowledge_engine/models/: __init__.py  api.py  dependency.py  event.py  knowledge_page.py  project.py  service.py
knowledge_engine/pipeline/: __init__.py  pipeline.py
knowledge_engine/repository/: __init__.py  manager.py
presentation/: README.md  deck.js  index.html  package-lock.json  package.json  record.mjs  styles.css
src/akashic/: __init__.py
src/akashic/cli/: __init__.py
src/akashic/engine/: __init__.py  agent.py  config.py  doctor.py  generate.py  global_config.py  init.py  prompt_builder.py  registry.py  repositories.py  skills.py  status.py  workspace.py
src/akashic/prompts/: generate_adr.md  generate_entity.md  generate_flow.md  generate_service.md  generate_system.md  master.md
src/akashic/server/: __init__.py  site.py
src/akashic/skills/: __init__.py
src/akashic/skills/akashic/: SKILL.md
tests/: conftest.py  test_agent.py  test_api.py  test_cli.py  test_doctor.py  test_generate.py  test_init.py  test_pipeline.py  test_prompt_builder.py  test_repositories.py  test_site.py  test_skills.py  test_status.py
