[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akashic"
version = "0.1.0"
description = "CLI for Git-backed knowledge repositories."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pydantic>=2",
  "pymdown-extensions>=10.8",
  "PyYAML>=6",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
akashic = "akashic.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/akashic"]
