[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akashic"
version = "0.1.0"
description = "CLI for Git-backed knowledge repositories."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
  "PyYAML>=6",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[dependency-groups]
dev = [
  "pytest>=8",
]

[tool.uv]
default-groups = ["dev"]

[project.scripts]
akashic = "akashic.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/akashic"]
force-include = { "frontend" = "akashic/frontend" }
only-include = ["src/akashic", "frontend"]

[tool.hatch.build]
artifacts = ["frontend/node_modules/**", "frontend/dist/**", "frontend/.next/**"]
