[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akashic-kb"
version = "0.1.2"
description = "CLI for Git-backed knowledge repositories."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Akashic contributors" },
]
keywords = ["documentation", "git", "knowledge-base", "markdown", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "pydantic>=2",
  "PyYAML>=6",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/kanakOS01/akashic"
Repository = "https://github.com/kanakOS01/akashic"
Issues = "https://github.com/kanakOS01/akashic/issues"
Documentation = "https://github.com/kanakOS01/akashic/tree/main/docs"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "twine>=5",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "twine>=6.2.0",
]

[tool.uv]
default-groups = ["dev"]

[project.scripts]
akashic = "akashic.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/akashic"]
force-include = { "frontend" = "akashic/frontend" }
only-include = ["src/akashic", "frontend"]

[tool.hatch.build]
exclude = [
  "/frontend/node_modules",
  "/frontend/dist",
  "/frontend/.next",
  "/frontend/build",
  "/frontend/out",
]
